--- a/client/src/components/special/file-actions/open-in-tool/open-in-tool.css
+++ b/client/src/components/special/file-actions/open-in-tool/open-in-tool.css
@@ -31,6 +31,7 @@
   width: 35vw;
   height: 35vh;
   min-width: 200px;
+  z-index: 100;
 }
 
 .modal-overlay div[class~="ant-popover-inner-content"] {
